--- a/Univariate Analysis/2.Measure of Central Tendency/CentralTendency.ipynb
+++ b/Univariate Analysis/2.Measure of Central Tendency/CentralTendency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "002bf044-695a-424c-a3d9-d37aee6aa8c8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ab516a73-d073-403d-a250-20210751555e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c437473d-cc9f-4611-b383-1210a8f9f930",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "[215 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b93999ba-0a5e-4473-a966-be061dd120cc",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c476d8da-2664-4cf9-8620-975c382f5735",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "dad107f2-c89d-42cf-a0cc-6be960040c57",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "['sl_no', 'ssc_p', 'hsc_p', 'degree_p', 'etest_p', 'mba_p', 'salary']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7a003400-0381-4dc6-b279-2fa68dd07faf",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "f13f4b9c-eaa7-4695-9e7d-3ada422e88ab",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "max    940000.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,37 +692,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "4566b0ed-3f80-4b3f-af5c-b9658dcbc51f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\2549687156.py:3: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "univariate = pd.DataFrame(index=[\"Mean\",\"Median\",\"Mode\"],columns =quant)\n",
     "for columnName in quant:\n",
-    "    univariate[columnName][\"Mean\"] = dataset[columnName].mean()"
+    "    #univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
+    "    univariate.loc[\"Mean\", [columnName]] = dataset[columnName].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "b8e25652-acd1-40ea-9735-9f609ef3f5bd",
    "metadata": {},
    "outputs": [
@@ -803,7 +786,7 @@
        "Mode              NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,49 +797,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "86d6e333-62c9-4a44-9d7b-661ac88d6f02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\448810086.py:3: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\448810086.py:4: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Median\"] = dataset[columnName].median()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "univariate = pd.DataFrame(index=[\"Mean\",\"Median\",\"Mode\"],columns =quant)\n",
     "for columnName in quant:\n",
-    "    univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
-    "    univariate[columnName][\"Median\"] = dataset[columnName].median()"
+    "    univariate.loc[\"Mean\", [columnName]] = dataset[columnName].mean()\n",
+    "    univariate.loc[\"Median\", [columnName]] = dataset[columnName].median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "34a89d8f-ccee-450a-a5d1-1e763db7bbd6",
    "metadata": {},
    "outputs": [
@@ -937,7 +891,7 @@
        "Mode              NaN  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,83 +902,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "ca3ca9f2-221a-4ea6-9c15-524f108a17c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\547029213.py:3: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\547029213.py:4: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Median\"] = dataset[columnName].median()\n",
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\547029213.py:5: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Mode\"] = dataset[columnName].mode()[0]\n",
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\547029213.py:3: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
-      "C:\\Users\\SENTHIL-KUMAR-T-H\\AppData\\Local\\Temp\\ipykernel_19388\\547029213.py:4: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
-      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
-      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
-      "\n",
-      "df[\"col\"][row_indexer] = value\n",
-      "\n",
-      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "  univariate[columnName][\"Median\"] = dataset[columnName].median()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "univariate = pd.DataFrame(index=[\"Mean\",\"Median\",\"Mode\"],columns =quant)\n",
     "for columnName in quant:\n",
-    "    univariate[columnName][\"Mean\"] = dataset[columnName].mean()\n",
-    "    univariate[columnName][\"Median\"] = dataset[columnName].median()\n",
-    "    univariate[columnName][\"Mode\"] = dataset[columnName].mode()[0]"
+    "    univariate.loc[\"Mean\", [columnName]] = dataset[columnName].mean()\n",
+    "    univariate.loc[\"Median\", [columnName]] = dataset[columnName].median()\n",
+    "    univariate.loc[\"Mode\", [columnName]] = dataset[columnName].mode()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "8afce7ce-e68c-4ae7-a8b9-08a6c217e923",
    "metadata": {},
    "outputs": [
@@ -1105,7 +997,7 @@
        "Mode         300000.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,6 +1010,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ca6dd72-1a29-46a3-8750-96a7e313c30b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a81c2b-d8a2-45cb-943a-f61b129ce3f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7862d3a-d7a0-4ecb-864a-0343dcf625a4",
    "metadata": {},
    "outputs": [],
    "source": []
