--- a/Univariate Analysis/Data-preprocessing/Data-Preprocessing-Assignmnet.ipynb
+++ b/Univariate Analysis/Data-preprocessing/Data-Preprocessing-Assignmnet.ipynb
@@ -3422,6 +3422,24 @@
    "source": [
     "greater"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "66d2c6e9-478c-433a-8f75-3faf8c19c483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Their is no ouliters in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4680bbb6-7cc5-49d1-84e8-b9a2c1bf971b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
